# graph-analyzer

./: .gitignore  CMakeLists.txt  README.md  analyzer.cpp  dag-01.txt  format-and-tidy.sh  make-graph.py  package.sh
graphs/: graph-02.txt  graph-03.txt  graph-04.txt  graph-05.txt  graph-06.txt  graph-07.txt  graph-08.txt  graph-09.txt
